--- a/config.py.dist
+++ b/config.py.dist
@@ -5,4 +5,4 @@ import os
 class Config(object):
     # Indicate your own secret key
     SECRET_KEY = os.environ.get('SECRET_KEY') or 'YOUR_SECRET_KEY'
-    GEOCODING_GOOGLE_API_KEY = 'YOUR_GOOGLE_GEOCODING_API_KEY'
+    GOOGLE_API_KEY = 'YOUR_GOOGLE_GEOCODING_API_KEY'
